Set clickable to Sign-in and Sync error notifications

As clickable flag is not set for these notifications, even though they
are clickable, the mouse cursor did not change for them.

TEST=manual
BUG=801089

Change-Id: I378acab7339137db3c3f93bf33075fe9d297dccb
Reviewed-on: https://chromium-review.googlesource.com/869913
Reviewed-by: Mihai Sardarescu <msarda@chromium.org>
Reviewed-by: Pavel Yatsuk <pavely@chromium.org>
Commit-Queue: Tetsui Ohkubo <tetsui@chromium.org>
Cr-Commit-Position: refs/heads/master@{#530009}
Former-commit-id: ec5f2dc586d996e8d158f2a5f9303c9df04a228e