chrome/browser/signin/signin_error_notifier_ash.cc
@@ -105,6 +105,7 @@ void SigninErrorNotifier::OnErrorChanged() {
               base::Bind(&HandleNotificationClick)),
           kNotificationWarningIcon,
           message_center::SystemNotificationWarningLevel::WARNING);
+  notification->set_clickable(true);
   notification->SetSystemPriority();
 
   // Update or add the notification.
